--- a/styles/style.css
+++ b/styles/style.css
@@ -1,104 +1,3 @@
-<<<<<<< HEAD
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-
-    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
 h1 {
     font-size: 45px;
     font-style: italic;
@@ -128,39 +27,16 @@ img {
     max-width: 100%;
 }
 
-.headerWrapper {
-    text-align: center;
-}
 
-.header {
-    font-size: 60px;
-    font-style: italic;
-    text-align: center;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    max-width: 100%;
-    border-radius: 5px;
-    margin-top: -10px;
-    display: inline-block;
-    background-color: rgb(211, 225, 243)
-}
 
-.headerText {
-    display: inline;
-    padding: 5px 30px;
-    vertical-align: middle;
-}
-
-.logo {
-    width: 105px;
-    padding: 5px 20px;
-    vertical-align: middle;
-}
 
 body {
     background-color: lightsteelblue;
     text-align: center;
     line-height: 1.3;
     display: inline;
+    margin: 0px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .nav {
@@ -168,20 +44,17 @@ body {
     font-size: 25px;
     background-color: #033949;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 10px;
-    padding: 5px 80px;
-    justify-content: space-between;
+    padding: 5px 130px;
+    justify-content: flex-end;
     border-radius: 5px;
     z-index: 1;
 }
 
 .navButton {
-    background-color: #e7f9fe;
+    background-color: #033949;
     padding: 10px;
-    margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 10px 40px;
     border-radius: 5px;
-    border: 2px solid black;
     padding: 5px 20px;
 }
 
@@ -189,6 +62,7 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .navButton:hover {
@@ -203,6 +77,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+}
+
+.logo {
+    width: 175px;
+    padding: 5px 20px;
+    vertical-align: middle;
+    float: left;
+    position: absolute;
 }
 
 .sideImages {
@@ -232,10 +114,15 @@ body {
 }
 
 .mainImage {
-    max-width: 600px;
+    max-width: 400px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.contactImage {
+    max-width: 400px;
+
 }
 
 .mainGameSchedule {
@@ -255,16 +142,14 @@ body {
 
 .footer {
     position: relative;
-    width: 98%;
+    width: 100%;
     background-color: #033949;
-    height: 55px;
+    height: 1px;
     bottom: -50px;
-    margin: 1%;
-    border-radius: 5px;
 }
 
 a:visited {
-    color: purple;
+    color: whitesmoke;
 }
 
 a:active {
@@ -483,490 +368,4 @@ input[type=radio]:not(old) {
 iframe {
     width: 600px;
     height: 450px;
-=======
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-
-    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-h1 {
-    font-size: 45px;
-    font-style: italic;
-}
-
-h2 {
-    padding-left: 15px;
-    font-weight: 900;
-}
-
-h3 {
-    font-size: 30px;
-    text-indent: 40px;
-}
-
-h4 {
-    font-size: 24px;
-    text-indent: 20px;
-}
-
-h5 {
-    font-size: 30px;
-    margin: 20px 0px;
-}
-
-img {
-    max-width: 100%;
-}
-
-.headerWrapper {
-    text-align: center;
-}
-
-.header {
-    font-size: 60px;
-    font-style: italic;
-    text-align: center;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    max-width: 100%;
-    border-radius: 5px;
-    margin-top: -10px;
-    display: inline-block;
-    background-color: rgb(211, 225, 243)
-}
-
-.headerText {
-    display: inline;
-    padding: 5px 30px;
-    vertical-align: middle;
-}
-
-.logo {
-    width: 105px;
-    padding: 5px 20px;
-    vertical-align: middle;
-}
-
-body {
-    background-color: lightsteelblue;
-    text-align: center;
-    line-height: 1.3;
-    display: inline;
-}
-
-.nav {
-    display: flex;
-    font-size: 25px;
-    background-color: #033949;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 10px;
-    padding: 5px 80px;
-    justify-content: space-between;
-    border-radius: 5px;
-    z-index: 1;
-}
-
-.navButton {
-    background-color: #e7f9fe;
-    padding: 10px;
-    margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-    border: 2px solid black;
-    padding: 5px 20px;
-}
-
-.sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-}
-
-.navButton:hover {
-    background-color: lightsteelblue;
-}
-
-.navText {
-    margin: 0px;
-}
-
-.bodyBox {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.sideImages {
-    display: flex;
-    margin-top: 100px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.contentBox {
-    position: relative;
-    display: inline-block;
-    background-color: whitesmoke;
-    color: black;
-    margin: 25px 5% 0 5%;
-    padding: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 1000px;
-    border-radius: 5px;
-}
-
-.mainContent {
-    border: 1px solid black;
-    text-align: left;
-    margin: 50px 0px;
-    padding: 20px;
-    font-size: 16px;
-}
-
-.mainImage {
-    max-width: 600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.mainGameSchedule {
-    text-align: center;
-}
-
-.gameTable {
-    display: inline-block;
-}
-
-.registrationForm {
-    border: 1px solid black;
-    text-align: left;
-    padding: 25px 10px;
-    font-size: 18px;
-}
-
-.footer {
-    position: relative;
-    width: 98%;
-    background-color: #033949;
-    height: 55px;
-    bottom: -50px;
-    margin: 1%;
-    border-radius: 5px;
-}
-
-a:visited {
-    color: purple;
-}
-
-a:active {
-    color: red;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    transition: all 0.35s
-}
-
-ol {
-    margin: 0px 19px;
-    padding-left: 35px;
-}
-
-ol>li:before {
-    display: inline-block;
-    width: 1.6em;
-    padding-right: 0.5em;
-    font-weight: bold;
-    text-align: right;
-}
-
-ul {
-    padding-right: 10px;
-    line-height: 1.4;
-}
-
-table {
-    border-collapse: separate;
-    border-spacing: 1px;
-    padding: 30px;
-}
-
-th,
-td {
-    padding: 10px 15px;
-}
-
-thead {
-    background: #395870;
-    color: #fff;
-}
-
-tbody tr:nth-child(even) {
-    background: #f2f2f2;
-}
-
-tbody tr:nth-child(odd) {
-    background: #e6e6e6;
-}
-
-th {
-    text-decoration: underline;
-}
-
-form {
-    font: 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    display: flex;
-}
-
-fieldset {
-    border: 0;
-    display: flex;
-}
-
-input {
-    border-radius: 15px;
-    font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin: 5px;
-    width: 100%;
-    flex-wrap: nowrap;
-    margin-right: 20px;
-}
-
-.account-info label {
-    color: #395870;
-    display: flex;
-    font-weight: bold;
-    align-items: center;
-}
-
-.accountInfo {
-    width: 100%;
-}
-
-.itemText {
-    color: #395870;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-}
-
-.nearText {
-    color: #395870;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    margin-bottom: 0px;
-}
-
-.formLine {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    color: #395870;
-    font-weight: bold;
-}
-
-.schools {
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 40px;
-}
-
-.school {
-    display: flex;
-    flex-direction: column;
-}
-
-.activeButton {
-    background-color: lightsteelblue;
-}
-
-.schoolBox {
-    height: 30px;
-    border: 1px solid black;
-    border-spacing: 50px;
-    align-self: center
-}
-
-.positionsBox {
-    display: flex;
-    flex-wrap: wrap;
-    padding-right: 670px;
-}
-
-.alreadyBox {
-    display: flex;
-    width: 25%;
-    color: #395870;
-    font-weight: bold;
-    margin: 50px 10px 0px 0px;
-}
-
-.jerseySize {
-    display: flex;
-    margin: 10px 20px 0px 30px;
-    width: 50%;
-    justify-content: space-between;
-
-}
-
-.uniformBox1 {
-    display: flex;
-    flex-wrap: wrap;
-    width: 160px;
-    padding-right: 40px
-}
-
-.uniformBox2 {
-    display: flex;
-    flex-wrap: wrap;
-    width: 150px;
-    padding-right: 40px
-}
-
-.permissionText {
-    margin: 0px 20px 30px;
-}
-
-.account-action {
-    background: #f0f0f2;
-    border-top: 1px solid #c6c7cc;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 0px 20px 20px 20px;
-    border-radius: 15px;
-    padding: 0px 30px;
-}
-
-.account-action .btn {
-    background: linear-gradient(#49708f, #293f50);
-    border: 0;
-    color: #fff;
-    cursor: pointer;
-    font-weight: bold;
-    float: left;
-    padding: 8px 16px;
-    margin: 20px 0px;
-    width: 100px;
-}
-
-.account-action label {
-    color: #7c7c80;
-    font-size: 12px;
-    float: left;
-    margin: 10px 0 0 20px;
-}
-
-input[type=checkbox]:not(old),
-input[type=radio]:not(old) {
-    margin: 2px;
-    margin-left: 30px;
-    width: 20px;
-}
-
-.positionsBox input {
-    margin: 0px;
-    padding: 0px;
-}
-
-iframe {
-    width: 600px;
-    height: 450px;
->>>>>>> 48147234cb64e1a63b9c4c116271285b05adf89b
 }
